menambah data generator dan skenario xml

--- a/MAIA/test-output/old/Default suite/methods-not-run.html
+++ b/MAIA/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,5 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>ujian.ujiankedua.matematika.MatematikaTest.penjumlahanTest</td></tr>
+<tr><td>ujian.ujiankedua.matematika.MatematikaTest.modulusTest</td></tr>
+<tr><td>ujian.ujiankedua.matematika.MatematikaTest.penguranganTest</td></tr>
 </table>
