--- a/MAIA/test-output/old/Default suite/methods-alphabetical.html
+++ b/MAIA/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8764ef">  <td>22/09/05 20:13:14</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;GeometriTest.befTest()[pri:0, instance:ujian.ujiankedua.geometri.GeometriTest@156b88f5]">&gt;&gt;befTest</td> 
+<tr bgcolor="bb7c74">  <td>22/09/06 11:34:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MatematikaTest.aftMethod()[pri:0, instance:ujian.ujiankedua.matematika.MatematikaTest@f736069]">&lt;&lt;aftMethod</td> 
+<td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="bb7c74">  <td>22/09/06 11:34:26</td>   <td>-11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MatematikaTest.befMethod()[pri:0, instance:ujian.ujiankedua.matematika.MatematikaTest@f736069]">&gt;&gt;befMethod</td> 
+<td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="bb7c74">  <td>22/09/06 11:34:26</td>   <td>-36</td> <td>&nbsp;</td><td title="&gt;&gt;MatematikaTest.befTest()[pri:0, instance:ujian.ujiankedua.matematika.MatematikaTest@f736069]">&gt;&gt;befTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/05 20:13:14</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GeometriTest.luasPersegiTest()[pri:0, instance:ujian.ujiankedua.geometri.GeometriTest@156b88f5]">luasPersegiTest</td> 
-  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/05 20:13:14</td>   <td>31</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GeometriTest.luasSegitigaTest()[pri:0, instance:ujian.ujiankedua.geometri.GeometriTest@156b88f5]">luasSegitigaTest</td> 
-  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/05 20:13:14</td>   <td>34</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GeometriTest.luasTrapesiumTest()[pri:0, instance:ujian.ujiankedua.geometri.GeometriTest@156b88f5]">luasTrapesiumTest</td> 
+<tr bgcolor="bb7c74">  <td>22/09/06 11:34:26</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MatematikaTest.pembagianTest()[pri:2, instance:ujian.ujiankedua.matematika.MatematikaTest@f736069]">pembagianTest</td> 
   <td>main@1556956098</td>   <td></td> </tr>
 </table>
