menambah skema urutan pengujian kelas

--- a/MAIA/test-output/old/Suite/classes.html
+++ b/MAIA/test-output/old/Suite/classes.html
@@ -4,26 +4,30 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>ujian.ujiankedua.matematika.MatematikaTest</td>
+<td>ujian.ujiankedua.produkoop.BelanjaTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>penjumlahanTest</td>
+<td>kurangStokProdTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>penguranganTest</td>
+<td>kalkulasiDiskonTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>modulusTest</td>
+<td>tambahStokProdTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>pembagianTest</td>
+<td>kalkulasiDiskonTestDua</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>cekStokProdTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -65,11 +69,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>luasPersegiTest</td>
+<td>luasTrapesiumTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>luasTrapesiumTest</td>
+<td>luasPersegiTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
