--- a/MAIA/test-output/old/Default suite/classes.html
+++ b/MAIA/test-output/old/Default suite/classes.html
@@ -4,30 +4,38 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>ujian.ujiankedua.matematika.MatematikaTest</td>
+<td>ujian.ujiankedua.produkoop.BelanjaTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>penjumlahanTest</td>
+<td>kurangStokProdTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>penguranganTest</td>
+<td>kalkulasiDiskonTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>modulusTest</td>
+<td>tambahStokProdTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>pembagianTest</td>
+<td>kalkulasiDiskonTestDua</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>cekStokProdTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>befC</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
@@ -45,4 +53,8 @@
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>aftC</td>
+<td>&nbsp;</td></tr>
 </table>
