--- a/MAIA/test-output/old/Suite/methods-alphabetical.html
+++ b/MAIA/test-output/old/Suite/methods-alphabetical.html
@@ -1,58 +1,64 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8764ef">  <td>22/09/06 11:48:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MatematikaTest.aftC()[pri:0, instance:ujian.ujiankedua.matematika.MatematikaTest@6da21078]">&lt;&lt;aftC</td> 
+<tr bgcolor="8764ef">  <td>22/09/06 13:10:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BelanjaTest.aftC()[pri:0, instance:ujian.ujiankedua.produkoop.BelanjaTest@7fee8714]">&lt;&lt;aftC</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8a8276">  <td>22/09/06 11:48:47</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GeometriTest.aftC()[pri:0, instance:ujian.ujiankedua.geometri.GeometriTest@22ef9844]">&lt;&lt;aftC</td> 
+<tr bgcolor="8a8276">  <td>22/09/06 13:10:26</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GeometriTest.aftC()[pri:0, instance:ujian.ujiankedua.geometri.GeometriTest@6283d8b8]">&lt;&lt;aftC</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8a8276">  <td>22/09/06 11:48:47</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GeometriTest.aftMethod()[pri:0, instance:ujian.ujiankedua.geometri.GeometriTest@22ef9844]">&lt;&lt;aftMethod</td> 
+<tr bgcolor="8a8276">  <td>22/09/06 13:10:26</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GeometriTest.aftMethod()[pri:0, instance:ujian.ujiankedua.geometri.GeometriTest@6283d8b8]">&lt;&lt;aftMethod</td> 
 <td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/06 11:48:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MatematikaTest.aftMethod()[pri:0, instance:ujian.ujiankedua.matematika.MatematikaTest@6da21078]">&lt;&lt;aftMethod</td> 
+<tr bgcolor="8a8276">  <td>22/09/06 13:10:26</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GeometriTest.aftMethod()[pri:0, instance:ujian.ujiankedua.geometri.GeometriTest@6283d8b8]">&lt;&lt;aftMethod</td> 
 <td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8a8276">  <td>22/09/06 11:48:47</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GeometriTest.aftMethod()[pri:0, instance:ujian.ujiankedua.geometri.GeometriTest@22ef9844]">&lt;&lt;aftMethod</td> 
+<tr bgcolor="8764ef">  <td>22/09/06 13:10:26</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BelanjaTest.aftMethod()[pri:0, instance:ujian.ujiankedua.produkoop.BelanjaTest@7fee8714]">&lt;&lt;aftMethod</td> 
 <td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/06 11:48:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MatematikaTest.aftMethod()[pri:0, instance:ujian.ujiankedua.matematika.MatematikaTest@6da21078]">&lt;&lt;aftMethod</td> 
+<tr bgcolor="8764ef">  <td>22/09/06 13:10:26</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BelanjaTest.aftMethod()[pri:0, instance:ujian.ujiankedua.produkoop.BelanjaTest@7fee8714]">&lt;&lt;aftMethod</td> 
 <td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/06 11:48:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MatematikaTest.aftMethod()[pri:0, instance:ujian.ujiankedua.matematika.MatematikaTest@6da21078]">&lt;&lt;aftMethod</td> 
+<tr bgcolor="8764ef">  <td>22/09/06 13:10:26</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BelanjaTest.aftMethod()[pri:0, instance:ujian.ujiankedua.produkoop.BelanjaTest@7fee8714]">&lt;&lt;aftMethod</td> 
 <td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/06 11:48:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MatematikaTest.aftMethod()[pri:0, instance:ujian.ujiankedua.matematika.MatematikaTest@6da21078]">&lt;&lt;aftMethod</td> 
+<tr bgcolor="8764ef">  <td>22/09/06 13:10:26</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BelanjaTest.aftMethod()[pri:0, instance:ujian.ujiankedua.produkoop.BelanjaTest@7fee8714]">&lt;&lt;aftMethod</td> 
 <td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8a8276">  <td>22/09/06 11:48:47</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GeometriTest.aftMethod()[pri:0, instance:ujian.ujiankedua.geometri.GeometriTest@22ef9844]">&lt;&lt;aftMethod</td> 
+<tr bgcolor="8764ef">  <td>22/09/06 13:10:26</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BelanjaTest.aftMethod()[pri:0, instance:ujian.ujiankedua.produkoop.BelanjaTest@7fee8714]">&lt;&lt;aftMethod</td> 
 <td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8a8276">  <td>22/09/06 11:48:47</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GeometriTest.befC()[pri:0, instance:ujian.ujiankedua.geometri.GeometriTest@22ef9844]">&gt;&gt;befC</td> 
+<tr bgcolor="8a8276">  <td>22/09/06 13:10:26</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GeometriTest.aftMethod()[pri:0, instance:ujian.ujiankedua.geometri.GeometriTest@6283d8b8]">&lt;&lt;aftMethod</td> 
+<td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="8764ef">  <td>22/09/06 13:10:26</td>   <td>-43</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BelanjaTest.befC()[pri:0, instance:ujian.ujiankedua.produkoop.BelanjaTest@7fee8714]">&gt;&gt;befC</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/06 11:48:47</td>   <td>-41</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MatematikaTest.befC()[pri:0, instance:ujian.ujiankedua.matematika.MatematikaTest@6da21078]">&gt;&gt;befC</td> 
+<tr bgcolor="8a8276">  <td>22/09/06 13:10:26</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GeometriTest.befC()[pri:0, instance:ujian.ujiankedua.geometri.GeometriTest@6283d8b8]">&gt;&gt;befC</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/06 11:48:47</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MatematikaTest.befMethod()[pri:0, instance:ujian.ujiankedua.matematika.MatematikaTest@6da21078]">&gt;&gt;befMethod</td> 
+<tr bgcolor="8764ef">  <td>22/09/06 13:10:26</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BelanjaTest.befMethod()[pri:0, instance:ujian.ujiankedua.produkoop.BelanjaTest@7fee8714]">&gt;&gt;befMethod</td> 
 <td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8a8276">  <td>22/09/06 11:48:47</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GeometriTest.befMethod()[pri:0, instance:ujian.ujiankedua.geometri.GeometriTest@22ef9844]">&gt;&gt;befMethod</td> 
+<tr bgcolor="8764ef">  <td>22/09/06 13:10:26</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BelanjaTest.befMethod()[pri:0, instance:ujian.ujiankedua.produkoop.BelanjaTest@7fee8714]">&gt;&gt;befMethod</td> 
 <td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/06 11:48:47</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MatematikaTest.befMethod()[pri:0, instance:ujian.ujiankedua.matematika.MatematikaTest@6da21078]">&gt;&gt;befMethod</td> 
+<tr bgcolor="8a8276">  <td>22/09/06 13:10:26</td>   <td>12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GeometriTest.befMethod()[pri:0, instance:ujian.ujiankedua.geometri.GeometriTest@6283d8b8]">&gt;&gt;befMethod</td> 
 <td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8a8276">  <td>22/09/06 11:48:47</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GeometriTest.befMethod()[pri:0, instance:ujian.ujiankedua.geometri.GeometriTest@22ef9844]">&gt;&gt;befMethod</td> 
+<tr bgcolor="8a8276">  <td>22/09/06 13:10:26</td>   <td>12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GeometriTest.befMethod()[pri:0, instance:ujian.ujiankedua.geometri.GeometriTest@6283d8b8]">&gt;&gt;befMethod</td> 
 <td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/06 11:48:47</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MatematikaTest.befMethod()[pri:0, instance:ujian.ujiankedua.matematika.MatematikaTest@6da21078]">&gt;&gt;befMethod</td> 
+<tr bgcolor="8764ef">  <td>22/09/06 13:10:26</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BelanjaTest.befMethod()[pri:0, instance:ujian.ujiankedua.produkoop.BelanjaTest@7fee8714]">&gt;&gt;befMethod</td> 
 <td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8a8276">  <td>22/09/06 11:48:47</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GeometriTest.befMethod()[pri:0, instance:ujian.ujiankedua.geometri.GeometriTest@22ef9844]">&gt;&gt;befMethod</td> 
+<tr bgcolor="8a8276">  <td>22/09/06 13:10:26</td>   <td>12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GeometriTest.befMethod()[pri:0, instance:ujian.ujiankedua.geometri.GeometriTest@6283d8b8]">&gt;&gt;befMethod</td> 
 <td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/06 11:48:47</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MatematikaTest.befMethod()[pri:0, instance:ujian.ujiankedua.matematika.MatematikaTest@6da21078]">&gt;&gt;befMethod</td> 
+<tr bgcolor="8764ef">  <td>22/09/06 13:10:26</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BelanjaTest.befMethod()[pri:0, instance:ujian.ujiankedua.produkoop.BelanjaTest@7fee8714]">&gt;&gt;befMethod</td> 
 <td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8a8276">  <td>22/09/06 11:48:47</td>   <td>-64</td> <td>&nbsp;</td><td title="&gt;&gt;GeometriTest.befTest()[pri:0, instance:ujian.ujiankedua.geometri.GeometriTest@22ef9844]">&gt;&gt;befTest</td> 
+<tr bgcolor="8764ef">  <td>22/09/06 13:10:26</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BelanjaTest.befMethod()[pri:0, instance:ujian.ujiankedua.produkoop.BelanjaTest@7fee8714]">&gt;&gt;befMethod</td> 
+<td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="8a8276">  <td>22/09/06 13:10:26</td>   <td>-67</td> <td>&nbsp;</td><td title="&gt;&gt;GeometriTest.befTest()[pri:0, instance:ujian.ujiankedua.geometri.GeometriTest@6283d8b8]">&gt;&gt;befTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/06 11:48:47</td>   <td>-55</td> <td>&nbsp;</td><td title="&gt;&gt;MatematikaTest.befTest()[pri:0, instance:ujian.ujiankedua.matematika.MatematikaTest@6da21078]">&gt;&gt;befTest</td> 
+<tr bgcolor="8764ef">  <td>22/09/06 13:10:26</td>   <td>-61</td> <td>&nbsp;</td><td title="&gt;&gt;BelanjaTest.befTest()[pri:0, instance:ujian.ujiankedua.produkoop.BelanjaTest@7fee8714]">&gt;&gt;befTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8a8276">  <td>22/09/06 11:48:47</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GeometriTest.luasPersegiTest()[pri:0, instance:ujian.ujiankedua.geometri.GeometriTest@22ef9844]">luasPersegiTest</td> 
+<tr bgcolor="8764ef">  <td>22/09/06 13:10:26</td>   <td>-33</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BelanjaTest.cekStokProdTest()[pri:0, instance:ujian.ujiankedua.produkoop.BelanjaTest@7fee8714]">cekStokProdTest</td> 
   <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8a8276">  <td>22/09/06 11:48:47</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GeometriTest.luasSegitigaTest()[pri:0, instance:ujian.ujiankedua.geometri.GeometriTest@22ef9844]">luasSegitigaTest</td> 
+<tr bgcolor="8764ef">  <td>22/09/06 13:10:26</td>   <td>-12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BelanjaTest.kalkulasiDiskonTest()[pri:3, instance:ujian.ujiankedua.produkoop.BelanjaTest@7fee8714]">kalkulasiDiskonTest</td> 
   <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8a8276">  <td>22/09/06 11:48:47</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GeometriTest.luasTrapesiumTest()[pri:0, instance:ujian.ujiankedua.geometri.GeometriTest@22ef9844]">luasTrapesiumTest</td> 
+<tr bgcolor="8764ef">  <td>22/09/06 13:10:26</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BelanjaTest.kalkulasiDiskonTestDua()[pri:4, instance:ujian.ujiankedua.produkoop.BelanjaTest@7fee8714]">kalkulasiDiskonTestDua</td> 
   <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/06 11:48:47</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MatematikaTest.modulusTest()[pri:3, instance:ujian.ujiankedua.matematika.MatematikaTest@6da21078]">modulusTest</td> 
+<tr bgcolor="8764ef">  <td>22/09/06 13:10:26</td>   <td>-16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BelanjaTest.kurangStokProdTest()[pri:2, instance:ujian.ujiankedua.produkoop.BelanjaTest@7fee8714]">kurangStokProdTest</td> 
   <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/06 11:48:47</td>   <td>-8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MatematikaTest.pembagianTest()[pri:2, instance:ujian.ujiankedua.matematika.MatematikaTest@6da21078]">pembagianTest</td> 
+<tr bgcolor="8a8276">  <td>22/09/06 13:10:26</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GeometriTest.luasPersegiTest()[pri:0, instance:ujian.ujiankedua.geometri.GeometriTest@6283d8b8]">luasPersegiTest</td> 
   <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/06 11:48:47</td>   <td>-13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MatematikaTest.penguranganTest()[pri:1, instance:ujian.ujiankedua.matematika.MatematikaTest@6da21078]">penguranganTest</td> 
+<tr bgcolor="8a8276">  <td>22/09/06 13:10:26</td>   <td>7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GeometriTest.luasSegitigaTest()[pri:0, instance:ujian.ujiankedua.geometri.GeometriTest@6283d8b8]">luasSegitigaTest</td> 
   <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/06 11:48:47</td>   <td>-28</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MatematikaTest.penjumlahanTest()[pri:0, instance:ujian.ujiankedua.matematika.MatematikaTest@6da21078]">penjumlahanTest</td> 
+<tr bgcolor="8a8276">  <td>22/09/06 13:10:26</td>   <td>12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GeometriTest.luasTrapesiumTest()[pri:0, instance:ujian.ujiankedua.geometri.GeometriTest@6283d8b8]">luasTrapesiumTest</td> 
+  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="8764ef">  <td>22/09/06 13:10:26</td>   <td>-21</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BelanjaTest.tambahStokProdTest()[pri:1, instance:ujian.ujiankedua.produkoop.BelanjaTest@7fee8714]">tambahStokProdTest</td> 
   <td>main@1556956098</td>   <td></td> </tr>
 </table>
