--- a/MAIA/test-output/emailable-report.html
+++ b/MAIA/test-output/emailable-report.html
@@ -8,18 +8,12 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">8</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">163</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">1,656</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">ujian.ujiankedua.geometri.GeometriTest</td><td><a href="#m0">luasPersegiTest</a></td><td rowspan="1">1662467974435</td><td rowspan="1">4</td></tr><tr class="passedeven"><td><a href="#m1">luasSegitigaTest</a></td><td rowspan="1">1662467974443</td><td rowspan="1">4</td></tr><tr class="passedeven"><td><a href="#m2">luasTrapesiumTest</a></td><td rowspan="1">1662467974451</td><td rowspan="1">3</td></tr><tr class="passedodd"><td rowspan="5">ujian.ujiankedua.produkoop.BelanjaTest</td><td><a href="#m3">cekStokProdTest</a></td><td rowspan="1">1662467974389</td><td rowspan="1">8</td></tr><tr class="passedodd"><td><a href="#m4">kalkulasiDiskonTest</a></td><td rowspan="1">1662467974418</td><td rowspan="1">3</td></tr><tr class="passedodd"><td><a href="#m5">kalkulasiDiskonTestDua</a></td><td rowspan="1">1662467974425</td><td rowspan="1">3</td></tr><tr class="passedodd"><td><a href="#m6">kurangStokProdTest</a></td><td rowspan="1">1662467974413</td><td rowspan="1">1</td></tr><tr class="passedodd"><td><a href="#m7">tambahStokProdTest</a></td><td rowspan="1">1662467974406</td><td rowspan="1">2</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">latihan.latihanrstassured.DataDrivenTut</td><td><a href="#m0">dataProvTest</a></td><td rowspan="2">1662961915053</td><td rowspan="2">56</td></tr><tr class="passedeven"><td><a href="#m1">dataProvTest</a></td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">ujian.ujiankedua.geometri.GeometriTest#luasPersegiTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">ujian.ujiankedua.geometri.GeometriTest#luasSegitigaTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">ujian.ujiankedua.geometri.GeometriTest#luasTrapesiumTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">ujian.ujiankedua.produkoop.BelanjaTest#cekStokProdTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">ujian.ujiankedua.produkoop.BelanjaTest#kalkulasiDiskonTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">ujian.ujiankedua.produkoop.BelanjaTest#kalkulasiDiskonTestDua</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">ujian.ujiankedua.produkoop.BelanjaTest#kurangStokProdTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">ujian.ujiankedua.produkoop.BelanjaTest#tambahStokProdTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">latihan.latihanrstassured.DataDrivenTut#dataProvTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>Bono</td><td>null</td><td>1</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">latihan.latihanrstassured.DataDrivenTut#dataProvTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>Lampard</td><td>null</td><td>1</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
