--- a/MAIA/test-output/old/Default suite/methods.html
+++ b/MAIA/test-output/old/Default suite/methods.html
@@ -1,40 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8764ef">  <td>22/09/06 13:04:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BelanjaTest.befMethod()[pri:0, instance:ujian.ujiankedua.produkoop.BelanjaTest@47faa49c]">&gt;&gt;befMethod</td> 
-<td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/06 13:04:26</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BelanjaTest.aftMethod()[pri:0, instance:ujian.ujiankedua.produkoop.BelanjaTest@47faa49c]">&lt;&lt;aftMethod</td> 
-<td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/06 13:04:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BelanjaTest.befMethod()[pri:0, instance:ujian.ujiankedua.produkoop.BelanjaTest@47faa49c]">&gt;&gt;befMethod</td> 
-<td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/06 13:04:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BelanjaTest.befMethod()[pri:0, instance:ujian.ujiankedua.produkoop.BelanjaTest@47faa49c]">&gt;&gt;befMethod</td> 
-<td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/06 13:04:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BelanjaTest.befMethod()[pri:0, instance:ujian.ujiankedua.produkoop.BelanjaTest@47faa49c]">&gt;&gt;befMethod</td> 
-<td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/06 13:04:26</td>   <td>-53</td> <td>&nbsp;</td><td title="&gt;&gt;BelanjaTest.befTest()[pri:0, instance:ujian.ujiankedua.produkoop.BelanjaTest@47faa49c]">&gt;&gt;befTest</td> 
+<tr bgcolor="b9a598">  <td>22/09/12 12:51:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataDrivenTut.dataProvTest(java.lang.String,java.lang.String,int)[pri:0, instance:latihan.latihanrstassured.DataDrivenTut@1b2abca6]">dataProvTest</td> 
+  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="b9a598">  <td>22/09/12 12:51:53</td>   <td>-1579</td> <td>&nbsp;</td><td title="&gt;&gt;DataDrivenTut.befTest()[pri:0, instance:latihan.latihanrstassured.DataDrivenTut@1b2abca6]">&gt;&gt;befTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/06 13:04:26</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BelanjaTest.aftMethod()[pri:0, instance:ujian.ujiankedua.produkoop.BelanjaTest@47faa49c]">&lt;&lt;aftMethod</td> 
-<td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/06 13:04:26</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BelanjaTest.aftMethod()[pri:0, instance:ujian.ujiankedua.produkoop.BelanjaTest@47faa49c]">&lt;&lt;aftMethod</td> 
-<td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/06 13:04:26</td>   <td>-15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BelanjaTest.tambahStokProdTest()[pri:1, instance:ujian.ujiankedua.produkoop.BelanjaTest@47faa49c]">tambahStokProdTest</td> 
-  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/06 13:04:26</td>   <td>-11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BelanjaTest.kurangStokProdTest()[pri:2, instance:ujian.ujiankedua.produkoop.BelanjaTest@47faa49c]">kurangStokProdTest</td> 
-  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/06 13:04:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BelanjaTest.befMethod()[pri:0, instance:ujian.ujiankedua.produkoop.BelanjaTest@47faa49c]">&gt;&gt;befMethod</td> 
-<td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/06 13:04:26</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BelanjaTest.aftMethod()[pri:0, instance:ujian.ujiankedua.produkoop.BelanjaTest@47faa49c]">&lt;&lt;aftMethod</td> 
-<td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/06 13:04:26</td>   <td>-28</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BelanjaTest.cekStokProdTest()[pri:0, instance:ujian.ujiankedua.produkoop.BelanjaTest@47faa49c]">cekStokProdTest</td> 
-  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/06 13:04:26</td>   <td>-37</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BelanjaTest.befC()[pri:0, instance:ujian.ujiankedua.produkoop.BelanjaTest@47faa49c]">&gt;&gt;befC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/06 13:04:26</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BelanjaTest.aftMethod()[pri:0, instance:ujian.ujiankedua.produkoop.BelanjaTest@47faa49c]">&lt;&lt;aftMethod</td> 
-<td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/06 13:04:26</td>   <td>9</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BelanjaTest.aftC()[pri:0, instance:ujian.ujiankedua.produkoop.BelanjaTest@47faa49c]">&lt;&lt;aftC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/06 13:04:26</td>   <td>-6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BelanjaTest.kalkulasiDiskonTest()[pri:3, instance:ujian.ujiankedua.produkoop.BelanjaTest@47faa49c]">kalkulasiDiskonTest</td> 
-  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="8764ef">  <td>22/09/06 13:04:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BelanjaTest.kalkulasiDiskonTestDua()[pri:4, instance:ujian.ujiankedua.produkoop.BelanjaTest@47faa49c]">kalkulasiDiskonTestDua</td> 
+<tr bgcolor="b9a598">  <td>22/09/12 12:51:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataDrivenTut.dataProvTest(java.lang.String,java.lang.String,int)[pri:0, instance:latihan.latihanrstassured.DataDrivenTut@1b2abca6]">dataProvTest</td> 
   <td>main@1556956098</td>   <td></td> </tr>
 </table>
