--- a/MAIA/test-output/old/Default suite/methods.html
+++ b/MAIA/test-output/old/Default suite/methods.html
@@ -1,10 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b9a598">  <td>22/09/12 12:51:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataDrivenTut.dataProvTest(java.lang.String,java.lang.String,int)[pri:0, instance:latihan.latihanrstassured.DataDrivenTut@1b2abca6]">dataProvTest</td> 
-  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="b9a598">  <td>22/09/12 12:51:53</td>   <td>-1579</td> <td>&nbsp;</td><td title="&gt;&gt;DataDrivenTut.befTest()[pri:0, instance:latihan.latihanrstassured.DataDrivenTut@1b2abca6]">&gt;&gt;befTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="b9a598">  <td>22/09/12 12:51:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataDrivenTut.dataProvTest(java.lang.String,java.lang.String,int)[pri:0, instance:latihan.latihanrstassured.DataDrivenTut@1b2abca6]">dataProvTest</td> 
+<tr bgcolor="a5b8a8">  <td>22/09/13 11:51:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="cekFormy.testFormy()[pri:0, instance:latihan.seleniumlat.cekFormy@4a883b15]">testFormy</td> 
   <td>main@1556956098</td>   <td></td> </tr>
 </table>
