--- a/MAIA/test-output/old/Default suite/methods.html
+++ b/MAIA/test-output/old/Default suite/methods.html
@@ -1,10 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="939c60">  <td>22/09/15 22:09:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Dropdown.tearDown()[pri:0, instance:tugas.selenium.formy.Dropdown@449a4f23]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="939c60">  <td>22/09/15 22:09:22</td>   <td>-12859</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Dropdown.testDropdown()[pri:0, instance:tugas.selenium.formy.Dropdown@449a4f23]">testDropdown</td> 
+<tr bgcolor="9aa2f7">  <td>22/09/16 23:41:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AmazonAwsFormTest.amazonFormFilling()[pri:0, instance:tugas.selenium.demoqa.AmazonAwsFormTest@7d0b7e3c]">amazonFormFilling</td> 
   <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="939c60">  <td>22/09/15 22:09:19</td>   <td>-15814</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Dropdown.setUp()[pri:0, instance:tugas.selenium.formy.Dropdown@449a4f23]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="9aa2f7">  <td>22/09/16 23:40:55</td>   <td>-4501</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AmazonAwsFormTest.pageObject()[pri:0, instance:tugas.selenium.demoqa.AmazonAwsFormTest@7d0b7e3c]">&gt;&gt;pageObject</td> 
+<td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
 </table>
