menambahkan file untuk ujian kelima

--- a/MAIA/test-output/old/Default suite/classes.html
+++ b/MAIA/test-output/old/Default suite/classes.html
@@ -4,34 +4,49 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>latihan.cucumberr.loginrunner.LoginRunner</td>
+<td>ujian.ujiankelima.selenium.DemoQAShopTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>runScenario</td>
-<td>cucumber </td>
-</tr>
+<td>checkoutShop</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>shopDemoQALogin</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>addQuantityBlack</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>tambahWIshLiSTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>addProductToCart</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>setUpClass</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>pageObject</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>closeBrowser</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>tearDownClass</td>
-<td>&nbsp;</td></tr>
 </table>
