--- a/MAIA/test-output/old/Default suite/methods.html
+++ b/MAIA/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="64b4ec">  <td>22/09/20 22:07:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:latihan.cucumberr.loginrunner.LoginRunner@196a42c3]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="64b4ec">  <td>22/09/20 22:07:05</td>   <td>-27024</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:latihan.cucumberr.loginrunner.LoginRunner@196a42c3]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="64b4ec">  <td>22/09/20 22:07:05</td>   <td>-26521</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:latihan.cucumberr.loginrunner.LoginRunner@196a42c3]">runScenario</td> 
+<tr bgcolor="d4f8f5">  <td>22/09/25 11:37:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DemoQAShopTest.closeBrowser()[pri:0, instance:ujian.ujiankelima.selenium.DemoQAShopTest@20140db9]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>22/09/25 11:37:37</td>   <td>-5249</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoQAShopTest.shopDemoQALogin()[pri:0, instance:ujian.ujiankelima.selenium.DemoQAShopTest@20140db9]">shopDemoQALogin</td> 
   <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>22/09/25 11:37:28</td>   <td>-14269</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DemoQAShopTest.pageObject()[pri:0, instance:ujian.ujiankelima.selenium.DemoQAShopTest@20140db9]">&gt;&gt;pageObject</td> 
+<td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
 </table>
